--- a/pom.xml
+++ b/pom.xml
@@ -44,16 +44,11 @@
             <version>[${dn.datastore.min.ver}, ${dn.datastore.max.ver})</version>
         </dependency>
 
-        <!-- Change to the datastore driver required for your datastore -->
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>2.2.220</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
-            <version>2.6.1</version>
+       <!-- Change to the datastore driver required for your datastore -->
+         <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.0.0</version>
         </dependency>
 
         <dependency>
